# https---github.com-shifosss-personal-RAG-for-everything

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/prd/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
PRDs/: part3_s14-s16.md  part7_s22-s23-appendix.md
contextd/: config.py  llm_json.py  logging_.py
contextd/cli/: main.py
contextd/cli/commands/: config.py  eval.py  forget.py  ingest.py  list.py  query.py  serve.py  status.py  version.py
contextd/eval/: harness.py  judge.py  run.py  seed_queries.json
contextd/ingest/: embedder.py  pipeline.py  protocol.py  registry.py
contextd/ingest/adapters/: __init__.py  claude_export.py  git_repo.py  pdf.py
contextd/mcp/: api.py  schemas.py  server_runner.py
contextd/retrieve/: dense.py  filters.py  format.py  fusion.py  pipeline.py  preprocess.py  rerank.py  rewrite.py  sparse.py
contextd/storage/: db.py  models.py  schema.py  vectors.py
docs/: USER_GUIDE.md
docs/PRDs/: part1_front_s1-s7.md  part2_s8-s13.md  part4_s17.md  part5_s18-s19.md  part6_s20-s21.md
docs/demo/: v0.1-script.md
docs/plans/: 00-master-spec.md  01-phase1-bootstrap.md  02-phase2-ingestion.md  03-phase3-retrieval.md  04-cross-ai-smoke.md  04-phase4-mcp-cli.md  05-phase5-polish.md
mcp-server/: .gitignore  biome.json  package.json  pnpm-lock.yaml  tsconfig.json
mcp-server/src/: http-client.ts  index.ts  schemas.ts
mcp-server/src/tools/: expand-context.ts  fetch-chunk.ts  get-edges.ts  get-source.ts  list-corpora.ts  list-sources.ts  search-corpus.ts
mcp-server/tests/: integration.test.ts
tasks/: before-publish.md
tests/: conftest.py  test_smoke.py
tests/fixtures/: _generate_pdfs.py
tests/fixtures/claude/: export.json
tests/integration/: test_corpora_isolation.py  test_db.py  test_vectors.py
tests/integration/cli/: test_forget.py  test_ingest.py  test_list.py  test_query.py  test_status.py
tests/integration/eval/: test_harness.py  test_judge.py  test_run.py
tests/privacy/: conftest.py  test_no_content_at_info.py  test_no_outbound_network.py  test_non_mutation.py
tests/unit/: test_config.py  test_llm_json.py  test_logging.py  test_models.py  test_schema.py
(+19 files in other folders)
