[project]
name = "contextd"
version = "0.1.0.dev0"
description = "Local-first, MCP-first personal RAG server"
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alex Zhang", email = "alexandar.zhang@mail.utoronto.ca" }]
dependencies = [
  "fastapi==0.115.4",
  "uvicorn==0.32.1",
  "pydantic==2.10.0",
  "pydantic-settings>=2.6,<3",
  "lancedb==0.17.0",
  "pyarrow>=18,<19",
  "sentence-transformers==3.3.1",
  "tokenizers==0.21.0",
  "torch==2.5.1",
  "anthropic==0.50.0",
  "pymupdf4llm==0.0.17",
  "pymupdf==1.25.1",
  "pypdf==5.1.0",
  "tree-sitter==0.23.2",
  "tree-sitter-python==0.23.6",
  "tree-sitter-typescript==0.23.2",
  "tree-sitter-javascript==0.23.1",
  "tree-sitter-rust==0.23.2",
  "tree-sitter-go==0.23.4",
  "tree-sitter-java==0.23.5",
  "markdown-it-py==3.0.0",
  "mdit-py-plugins==0.4.2",
  "pygit2==1.16.0",
  "typer==0.13.0",
  "click==8.1.8",
  "rich==13.9.4",
  "structlog==24.4.0",
  "python-ulid==3.0.0",
]

[project.optional-dependencies]
gpu = ["torch==2.5.1"]

[project.scripts]
contextd = "contextd.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contextd"]

[dependency-groups]
dev = [
  "ruff==0.8.2",
  "mypy==1.13.0",
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "pytest-benchmark==5.1.0",
  "coverage==7.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "TCH"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra -m 'not slow'"
markers = [
  "unit: fast isolated tests",
  "integration: touch filesystem/sqlite/lancedb",
  "privacy: enforce non-mutation + no-outbound-network",
  "slow: tests that download models or are slow",
]
filterwarnings = [
  "ignore::DeprecationWarning:pygit2",
  "ignore::DeprecationWarning:swig_runtime_data4",
]

[tool.mypy]
python_version = "3.12"
strict_optional = true
disallow_untyped_defs = true
warn_unused_ignores = true
